# YTDownloader

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  TODO.md  TUTORIAL.md  YTDownloader.py  layouts.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: codeql.yml  pylint.yaml  tests.yaml
YTDownloader/: __init__.py  __main__.py  download_options.py  downloader.py  downloader_base.py  error_window.py  main.py
scripts/: YTDownloader.py  downloader.py  layouts.py  main.py  windows.py
scripts/utils/: __init__.py  download_option.py  download_options.py  downloader.py  downloader_base.py  downloader_base.pyi  error_window.py
tests/: YTDownloader_test.py  __init__.py  download_options_test.py  downloader_test.py  test_download_options.py
