[project]
name = "YTDownloader"
version = "1.5.1"
description = "A program to download any YouTube video or playlist"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "realshouzy" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython"
]
requires-python = ">=3.10"
dependencies = ["pytube", "PySimpleGUI"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
warn_redundant_casts = true
ignore_missing_imports = true
show_error_codes = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
warn_return_any = true
strict_equality = true
no_implicit_reexport = true
no_implicit_optional = true
warn_unused_ignores = false

[tool.ruff]
extend-select = [
    "F", 
    "A", 
    "B", 
    "INP", 
    "I", 
    "PYI", 
    "RSE", 
    "RET", 
    "Q", 
    "SLF", 
    "SIM", 
    "TID", 
    "TCH", 
    "ARG", 
    "PL", 
    "RUF",
    "C4",
    "G",
    "COM",
    "BLE",
    "FBT",
]
ignore = ["E501", "PLR0912", "BLE001", "FBT003", "ARG002", "INP001"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
show-fixes = true
target-version = "py311"

[tool.ruff.pydocstyle]
convention = "pep257"
