[project]
name = "YTDownloader"
description = "A program to download any YouTube video or playlist"
license = { text = "MIT" }
authors = [{ name = "realshouzy" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython"
]
requires-python = ">=3.10"
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "auto_file_sorter.__version__"}
readme = {file = ["README.md"]}
dependencies = {file = "requirements.txt"}

[tool.black]
target-version = ["py311", "py310"]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
warn_redundant_casts = true
ignore_missing_imports = true
show_error_codes = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
warn_return_any = true
strict_equality = true
no_implicit_reexport = true
no_implicit_optional = true
warn_unused_ignores = false

[tool.ruff]
select = ["ALL"]
ignore = [
    "E501",
    "PLR0912",
    "BLE001",
    "FBT003",
    "ARG002",
    "INP001",
    "N813",
    "PGH003",
    "D107",
    "ANN101",
    "ANN401",
    "D105",
    "N999",
]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
show-fixes = true
target-version = "py311"
line-length = 88

[tool.ruff.isort]
known-first-party = ["YTDownloader"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.pylint]
disable = ["C0103"]
