[project]
name = "YTDownloader"
description = "A program to download any YouTube video or playlist"
license = { text = "MIT" }
authors = [{ name = "realshouzy" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.8"
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools.dynamic]
version = { attr = "auto_file_sorter.__version__" }
readme = { file = ["README.md"] }
dependencies = { file = "requirements.txt" }

[tool.black]
target-version = ["py311", "py310", "py39", "py38"]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
warn_redundant_casts = true
ignore_missing_imports = true
show_error_codes = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
warn_return_any = true
strict_equality = true
no_implicit_reexport = true
no_implicit_optional = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "tests.downloader_test"
disable_error_code = ["attr-defined"]

[tool.ruff]
select = ["ALL"]
ignore = [
    "E501",
    "PLR0912",
    "BLE001",
    "FBT003",
    "ARG002",
    "INP001",
    "N813",
    "PGH003",
    "D107",
    "ANN101",
    "ANN401",
    "D105",
    "N999",
    "EM101",
    "EM102",
    "TRY003",
]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
show-fixes = true
target-version = "py311"
line-length = 88

[tool.ruff.extend-per-file-ignores]
"./tests/*_test.py" = ["ANN201", "D103", "S101"]

[tool.ruff.isort]
known-first-party = ["YTDownloader"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.pylint]
disable = ["C0103"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py"]
